2001-11-24  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server.c (gda_server_register_component): if I use
	"ptype = (GType *) ptype", I'll always get an invalid pointer :-)

2001-11-23  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-client.c (gda_client_open_connection): don't pass NULL
	to ORBit functions

	* gda-xml-document.c:
	* gda-recordset.c: include glib-object.h, not gobject/*.h

	* gda-parameter.[ch] (gda_parameter_new): added a GdaValueType
	parameter

	* gda-config.c (activation_property_to_parameter): adapted to recent
	changes in GdaParameter API

2001-11-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-parameter.[ch] (gda_parameter_list_add_value): implemented
	(gda_parameter_list_clear): new function
	(gda_parameter_list_find): implemented

2001-11-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-row.[ch] (gda_row_new): new function
	(gda_row_free): new function

	* gda-xml-database.c: removed <gobject/*.h>

2001-11-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.c: use /apps/libgda as prefix for configuration,
	for not stepping on the GNOME 1.x version configuration

2001-11-10  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.[ch] (gda_config_add_listener): new function
	(gda_config_remove_listener): new function

2001-11-07  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-data-model-array.c (gda_data_model_array_append_row): new
	function for adding data to a GdaDataModelArray object

	* gda-value.c (gda_value_isa): new function

	* gda-data-model-list.c (gda_data_model_list_get_value_at): I'm
	stupid, g_list_nth returns a GList *, not the data element!

2001-11-06  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-value.h: added GdaValueType enumeration, which wraps the
	CORBA typecodes

	* gda-value.c (gda_value_new): removed function
	(gda_value_new_null): new function
	(gda_value_new_bigint): new function
	(gda_value_new_binary): new function
	(gda_value_new_boolean): new function
	(gda_value_new_date): new function